--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="ru">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css"/>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 
     <style>
         #map {
@@ -18,18 +20,21 @@
         }
 
         tr.done {
-          background-color: aquamarine;
+            background-color: aquamarine;
         }
     </style>
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-md-8">
-            <div id="map" style="height:800px"></div>
+<div class="container-fluid">
+    <div class="col-md-8">
+        <div id="map" style="height:800px"></div>
+    </div>
+    <div ng-app="app" ng-controller="Orders">
+        <div class="col-md-2">
+            <input type="button" ng-click="stopOrdersGeneration()" value="Остановить">
         </div>
-        <div class="col-md-4">
-            <div class="row orders-table-container" ng-app="app" ng-controller="Orders">
+        <div class="col-md-2">
+            <div class="row orders-table-container">
                 <table class="table">
                     <tr>
                         <th>Номер заказа</th>
